make-a-wish-salesforce/src/objects/npe5__Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Constituent_Code__c</fullName>
        <description>It stores the value of Constituent Code</description>
        <label>Constituent Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wish Child</fullName>
                </value>
                <value>
                    <fullName>Wish Family</fullName>
                </value>
                <value>
                    <fullName>Celebrity</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Volunteer Leadership</fullName>
                </value>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Referral Source</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>It will hold the External Id value for avoiding duplicate</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hidden_Status_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is tracking status has been updated from batch or not.</description>
        <label>Hidden Status Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>It will hold the Import Id.</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <formula>npe5__Contact__r.Migrated_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to hold region code</description>
        <label>Region Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Regions__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.npe5__Organization__c</valueField>
            </filterItems>
            <filterItems>
                <field>Regions__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Regions__c</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>It holds the reason for declined.</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>npe5__Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Background Check</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Moved</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treating_Facility__c</fullName>
        <description>Ability to have multiple &quot;Current&quot; and/or multiple &quot;Previous&quot; facilities indicated in the case the child is being treated at multiple facilities</description>
        <label>Treating Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Data_Warning__c</fullName>
        <formula>If(datevalue(CreatedDate) &lt; DATE(2019, 09, 25), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT Data Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Count__c</fullName>
        <description>Enables better record counting functions on reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Email_Hidden__c</fullName>
        <description>It will be used as hidden field to store the user&apos;s email</description>
        <label>User Email Hidden</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Name_Hidden__c</fullName>
        <description>This field will be used as hidden filed to store the user name of the volunteer contact</description>
        <label>User Name Hidden</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe5__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe5__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Affiliation&apos;s Organization will be stored on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe5__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe5__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Out of Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
        <description>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</description>
        <inlineHelpText>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</inlineHelpText>
        <label>Related Opportunity Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Credit</fullName>
                </value>
                <value>
                    <fullName>Solicitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Affiliation_Treating_Facility_Hospital</fullName>
        <active>true</active>
        <errorConditionFormula>AND(npe5__Organization__r.RecordType.Name != &apos;Hospital Treatment Facility&apos;,  NOT(ISBLANK(TEXT(Treating_Facility__c))),$Profile.Name != &apos;Integration&apos; )</errorConditionFormula>
        <errorDisplayField>Treating_Facility__c</errorDisplayField>
        <errorMessage>Treating Facility can only be entered when the Organization record type is a Hospital Treating Facility.</errorMessage>
    </validationRules>
</CustomObject>